For Mecha 1.1.3 and Above
Use the built-in custom modal in MTE plugin.

--- a/special-characters/shell/map.css
+++ b/special-characters/shell/map.css
@@ -1,9 +1,9 @@
-.sc-table {
+.special-character-map {
   overflow:hidden;
   text-align:center;
 }
 
-.sc-table a {
+.special-character-map a {
   display:block;
   float:left;
   width:5%;
@@ -18,9 +18,16 @@
   text-decoration:none;
 }
 
-.sc-table a:focus,
-.sc-table a:hover {
-  background-color:black;
+.special-character-map a:focus,
+.special-character-map a:hover,
+.special-character-map a.selected {
+  background-color:#333;
   color:white;
   text-decoration:none;
 }
+
+.special-character-map a.selected,
+.special-character-map a.selected:focus,
+.special-character-map a.selected:hover {background-color:#365D98}
+
+.custom-modal-special-character {width:46.15384615384615em}
